<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:validation="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edititem.EditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/edit_item"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            validation:layout_constraintStart_toStartOf="parent"
            validation:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_icon"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_delete_24"
            validation:layout_constraintEnd_toEndOf="parent"
            validation:layout_constraintTop_toTopOf="parent" />

        <com.julianraj.validatedtextinputlayout.ValidatedTextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/name"
            validation:autoTrim="true"
            validation:isRequired="true"
            validation:layout_constraintEnd_toEndOf="parent"
            validation:layout_constraintStart_toStartOf="parent"
            validation:layout_constraintTop_toBottomOf="@+id/textView"
            validation:requiredValidationMessage="@string/required_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textCapWords" />

        </com.julianraj.validatedtextinputlayout.ValidatedTextInputLayout>

        <com.julianraj.validatedtextinputlayout.ValidatedTextInputLayout
            android:id="@+id/tilValue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/value"
            validation:autoTrim="true"
            validation:isRequired="true"
            validation:layout_constraintEnd_toEndOf="parent"
            validation:layout_constraintStart_toStartOf="parent"
            validation:layout_constraintTop_toBottomOf="@+id/tilName"
            validation:requiredValidationMessage="@string/required_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="numberDecimal|numberSigned" />

        </com.julianraj.validatedtextinputlayout.ValidatedTextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            validation:layout_constraintEnd_toEndOf="parent"
            validation:layout_constraintStart_toStartOf="parent"
            validation:layout_constraintTop_toBottomOf="@+id/tilValue">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/catIncome"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/income" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/catOutcome"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/outcome" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/toggleButtonGroupError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/required_field"
            android:textColor="#AA0000"
            android:textSize="13sp"
            android:visibility="gone"
            validation:layout_constraintStart_toStartOf="@+id/toggleButtonGroup"
            validation:layout_constraintTop_toBottomOf="@+id/toggleButtonGroup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/update"
            validation:layout_constraintBottom_toBottomOf="parent"
            validation:layout_constraintEnd_toEndOf="parent"
            validation:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>